# rusty_lsp

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_NOTES.md  gap-analysis.md
.github/workflows/: ci.yml  fuzz.yml  release.yml
benches/: core.rs
examples/: text_server.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: apply_edits.rs  message.rs  transport.rs  uri.rs
src/: cancel.rs  client.rs  documents.rs  error.rs  jsonrpc.rs  lib.rs  server.rs  service.rs  testing.rs  text.rs  transport.rs
src/lsp/: base.rs  client_capabilities.rs  code_action.rs  code_lens.rs  diagnostics.rs  document.rs  enums.rs  features.rs  file_operations.rs  formatting.rs  hierarchy.rs  inlay_hint.rs  inline_completion.rs  inline_value.rs  lifecycle.rs  links.rs  mod.rs  moniker.rs  notebook.rs  progress.rs  ranges.rs  registration.rs  rename.rs  semantic_tokens.rs  signature.rs  symbols.rs  trace.rs  window.rs  workspace.rs
tests/: integration.rs  property.rs  test_client.rs
