[package]
name = "rusty_lsp-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["rt", "io-util"] }

[dependencies.rusty_lsp]
path = ".."

# Detach from any enclosing workspace so `cargo test` at the repo root is
# unaffected; cargo-fuzz drives this crate directly.
[workspace]
members = ["."]

[[bin]]
name = "transport"
path = "fuzz_targets/transport.rs"
test = false
doc = false

[[bin]]
name = "message"
path = "fuzz_targets/message.rs"
test = false
doc = false

[[bin]]
name = "uri"
path = "fuzz_targets/uri.rs"
test = false
doc = false

[[bin]]
name = "apply_edits"
path = "fuzz_targets/apply_edits.rs"
test = false
doc = false
